# glyphdeck

./: .gitignore  .readthedocs.yaml  Chain.py  Handler.py  LICENSE  LLMHandler.py  PreReducer.py  Prepper.py  README.md  RegexSanitiser.py  Sanitiser.py  Set Environment Variables.md  base_script.py  cache.py  cache_types.py  constants.py  custom_types.py  data_types.py  llm_output_structures.py  lru_cache.py  process_script.py  pyproject.toml  type_models.py  utility.py  validators.py
CategoriGen/: constants.py  logger_constants.py  path_constants.py
CategoriGen/processors/: chain.py  llm_handler.py  prepper.py  sanitiser.py
CategoriGen/tools/: caching.py  directory_creators.py  file_importers.py  loggers.py  prepper.py  strings.py  time.py
CategoriGen/validation/: __init__.py  data_types.py  validators.py
docs/: autobuilder.bat  cascade.rst  clean_build.bat  clean_build_load.bat  conf.py  config.rst  data_types.rst  gd.rst  gen_index.rst  glyphdeck.config.rst  glyphdeck.processors.rst  glyphdeck.rst  glyphdeck.tools.rst  glyphdeck.validation.rst  index.rst  logs.rst  modules.rst  open_server.bat  processors.rst  tools.rst  validation.rst
docs/_cascade/: cascade.rst  llm_handler.rst  sanitiser.rst
docs/_static/: index_workflow_example.py
docs/_templates/: add_member_header.html
docs/_validators/: .BaseValidatorModel.rst  .CatHierarchySentiment.rst  .PrimaryCat.rst  .PrimaryCatSentiment.rst  .PrimarySubCat.rst  .Sentiment.rst  .SubCats.rst  .SubCatsPerItemOverallSentiment.rst  .SubCatsPerItemSentiment.rst  .SubCatsSentiment.rst  .Top5Cats.rst  .TopCatsSentiment.rst  validators.rst
functions/: about.md  logs.py  strings.py  time.py
glyphdeck/: __init__.py  _loggers.py  _path_constants.py  logger_constants.py  loggers.py
glyphdeck/config/: __init__.py  _path_constants.py  logger_config.py  logger_config.yaml  logger_defaults.py  logger_levels.py  logger_set_all.py
glyphdeck/processors/: chain.py  (+4 more)
logs/: about.md
processors/: __init__.py  chain.py  llm_handler.py  prepper.py  sanitiser.py
tests/: demotest.cascade.llm_handler.py  demotest.cascade.output.py  demotest.cascade.py  demotest.cascade.sanitiser.inheritance.py  demotest.cascade.sanitiser.run.py  demotest.chain.llm_handler.output.py  demotest.chain.llm_handler.py  demotest.chain.output.py  demotest.chain.py  demotest.chain.sanitiser.inheritance.py  demotest.chain.sanitiser.run.py  demotest.llm_handler.py  demotest.sanitiser.py  demotest.set_logging_config.py  demotest.tools.prepper.py  demotest.validation.validators.py  testdata.clothingreviews.csv  testdata.clothingreviews.xlsx  testdata.pizzashopreviews.csv  testdata.pizzashopreviews.xlsx  unittest.cascade.py  unittest.chain.py  unittest.sanitiser.py  unittest.tools.prepper.py  unittest.validation.validators.py
tools/: __init__.py  caching.py  directory_creators.py  loggers.py
validation/: data_types.py  validators.py
workflows/: 10k_workflow.py  base_workflow.py
(+29 files in other folders)
