[tool.poetry]
name = "categorigen"
version = "0.1.0"
description = "Streamlined asynchronous natural language categorisation & sentiment analysis using generative AI."
authors = ["Kyle Ross <107285758+Kyle-Ross@users.noreply.github.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
pandas = "^2.2.1"
icecream = "^2.1.3"
instructor = "^1.0.3"
openai = "^1.16.2"
tenacity = "^8.2.3"
diskcache = "^5.6.3"
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
