[tool.poetry]
name = "glyphdeck"
version = "1.1.2"
description = "The glyphdeck library is a comprehensive toolkit designed to streamline & simplify various aspects of asynchronous LLM data processing workflows over high-volume, dense semantic data - like customer feedback, reviews and comments."
authors = ["Kyle Ross <107285758+Kyle-Ross@users.noreply.github.com>"]
license = "Elastic License 2.0"
readme = "README.md"
repository = "https://github.com/Kyle-Ross/glyphdeck"
documentation = "https://glyphdeck.readthedocs.io/en/latest/"
keywords = ["llm", "openai", "nlp", "semantic", "langchain"]

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.2.1"
instructor = "^1.0.3"
openai = "^1.16.2"
tenacity = "^8.2.3"
diskcache = "^5.6.3"
pydantic = "^2.6.4"
openpyxl = "^3.1.2"
oyaml = "^1.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["D"]
ignore = ["D100", "D101", "D102", "D409"]






[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
sphinx = "^8.0.2"
sphinxawesome-theme = "^5.3.1"
sphinxemoji = "^0.3.1"
sphinx-autobuild = "^2024.10.3"

